--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@oclif/core": "^1.13.10",
+    "@oclif/core": "^1.16.0",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.0.1",
     "flagsmith": "3.9.1",
     "node-fetch": "^2.6.6"
   },
   "devDependencies": {
-    "@oclif/test": "^2",
+    "@oclif/test": "^2.1.1",
     "@types/chai": "^4",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.4",
@@ -39,7 +39,7 @@
     "shx": "^0.3.3",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "4.4.4"
   },
   "oclif": {
     "bin": "flagsmith",
