--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@oclif/core": "^1.16.0",
+    "@oclif/core": "^4.0.1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.0.1",
-    "flagsmith": "3.9.1",
-    "node-fetch": "^2.6.6"
+    "flagsmith": "4.0.2",
+    "node-fetch": "^2.6.6",
+    "nodemon": "^3.1.0",
+    "quicktype": "^23.0.170"
   },
   "devDependencies": {
     "@oclif/test": "^2.1.1",
@@ -39,7 +41,7 @@
     "shx": "^0.3.3",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
-    "typescript": "4.4.4"
+    "typescript": "5.4.5"
   },
   "oclif": {
     "bin": "flagsmith",
@@ -57,6 +59,7 @@
     }
   },
   "scripts": {
+    "dev": "nodemon --ignore dist/ --ext ts --exec npm run build",
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint . --ext .ts --config .eslintrc",
     "postpack": "shx rm -f oclif.manifest.json",
