--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,9 @@ jobs:
     name: Publish NPM Package
 
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
       - name: Clone and Install
         uses: ./.github/actions/clone-install
 
