--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Clone and Install
-        uses: ./.github/actions/clone-install
+        uses: ./.github/actions/install
 
       - run: npm run deploy
         env:
