--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Clone and Install
-        uses: ./.github/actions/clone-install
+        uses: ./.github/actions/install
 
       - name: Build
         run: npm run build
