Fix types, generic api authorisation

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "oclif-typescript"
   ],
   "rules": {
-    "no-prototype-builtins": 0
+    "no-prototype-builtins": 0,
+    "camelcase": 0
   }
 }
