--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   ],
   "rules": {
     "no-prototype-builtins": 0,
-    "camelcase": 0
+    "camelcase": 0,
+    "unicorn/filename-case": 0
   }
 }
