--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.0.1",
     "flagsmith": "^9.0.5",
-    "node-fetch": "^2.6.6",
-    "quicktype": "^23.0.170"
+    "node-fetch": "^2.6.6"
   },
   "devDependencies": {
     "@oclif/test": "^2.1.1",
@@ -38,6 +37,7 @@
     "mocha": "^11.1.0",
     "nodemon": "^3.1.0",
     "oclif": "^4.17.41",
+    "quicktype": "^23.0.170",
     "shx": "^0.3.3",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
