--- a/.github/workflows/conventional-commit.yml
+++ b/.github/workflows/conventional-commit.yml
@@ -6,6 +6,9 @@ on:
       - edited
       - opened
 
+permissions:
+  pull-requests: read
+
 jobs:
   conventional-commit:
     name: Conventional Commit
@@ -13,8 +16,6 @@ jobs:
     steps:
       - name: Check PR Conventional Commit title
         uses: amannn/action-semantic-pull-request@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           types: | # mirrors changelog-sections in the /release-please-config.json
             feat
