--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -6,7 +6,7 @@ runs:
     - name: Set up Node
       uses: actions/setup-node@v4
       with:
-        node-version: '18.x'
+        node-version-file: .nvmrc
         registry-url: 'https://registry.npmjs.org'
 
     - name: Install dependencies
