--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,8 +18,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Clone and Install
-        uses: ./.github/actions/install
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Install dependencies
+        run: npm install
+        shell: bash
 
       - name: Build
         run: npm run build
