Add loglevel verbose

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "deploy": "npm run build && npm publish",
-    "deploy:beta": "npm run build && npm publish",
+    "deploy:beta": "npm run build && npm publish --loglevel verbose",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
