--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "deploy": "npm run build && npm publish",
-    "deploy:beta": "npm run build && npm publish --loglevel verbose",
+    "deploy": "npm run build && npm publish --loglevel verbose",
+    "deploy:beta": "npm run build && npm publish",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
