--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,5 +25,7 @@ jobs:
           node-version-file: .nvmrc
           registry-url: 'https://registry.npmjs.org'  # required for trusted publishing
 
+      - run: npm i -g npm@latest
+
       - run: npm i
       - run: npm run deploy
