--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,8 +25,10 @@ jobs:
           node-version-file: .nvmrc
           registry-url: 'https://registry.npmjs.org'  # required for trusted publishing
 
-      - run: |
-          npm i -g npm@latest
-          npm --version
       - run: npm i
-      - run: npm run deploy
+      - name: Build
+        run: npm run build
+
+      # 🔑 Use npm@latest directly for publish
+      - name: Publish (trusted publishing)
+        run: npx -y npm@latest publish --provenance --access public --loglevel verbose
