--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - '*'
+    branches:
+      - ci/fix-npm-trusted-publishing
 
 permissions:
   id-token: write
@@ -23,5 +25,6 @@ jobs:
           node-version-file: .nvmrc
           registry-url: 'https://registry.npmjs.org'  # required for trusted publishing
 
+      - run: npm install -g npm@latest
       - run: npm i
       - run: npm run deploy
