--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,4 +24,5 @@ jobs:
           registry-url: 'https://registry.npmjs.org'  # required for trusted publishing
 
       - run: npm i
-      - run: npm run deploy
+      - run: npm run build
+      - run: npx -y npm@latest publish
